corrige as citacoes
coloca as citacoes no formato bibtext e as referencia de forma correta nos arquivos usando \textcite{}

--- a/f299-template-pi-paper/Topicos/estadodaarte.tex
+++ b/f299-template-pi-paper/Topicos/estadodaarte.tex
@@ -6,7 +6,7 @@ testes, resultando em casos de falsos positivos ou negativos. Dessa forma, o int
 abordagens objetivas e tecnologicamente assistidas, que combinem dados neuropsicológicos
 e comportamentais com técnicas de análises automatizadas, aumentou. Estudos recentes
 têm investigado o uso de jogos digitais sérios como ferramentas de avaliação e treinamento
-cognitivo, com foco na atenção contínua. Nascimento e Menezes (2020) exploraram a relação
+cognitivo, com foco na atenção contínua. \textcite{Nascimento2020} exploraram a relação
 entre a prática regular de videogames e o desempenho em atenção sustentada, avaliado
 pelo Conners’ Continuous Performance Test II (CPT II), uma versão amplamente utilizada do
 Teste de Desempenho Contínuo (TDC). Embora não tenham encontrado diferenças de
@@ -17,7 +17,7 @@ individuais e experiências digitais, sugerindo que a aplicação de jogos, mesm
 classificados como serious games, precisam de cuidados na metodologia e no controle de
 variáveis, com o fim de evitar interferências no desempenho atencional.
 
-Nesse contexto, Elbaum et al. (2020) exploraram o potencial diagnóstico da integração
+Nesse contexto, \textcite{Elbaum2020} exploraram o potencial diagnóstico da integração
 entre o MOXO-dCPT (um teste de desempenho contínuo com fases estruturadas de distração
 auditiva e visual) e dados de rastreamento ocular (eye tracking). O estudo contou com uma
 amostra de 85 adultos (43 com diagnóstico formal de TDAH e 42 controles saudáveis) e
@@ -30,7 +30,7 @@ pontuações tradicionais do MOXO. Além disso, os autores propuseram que as par
 com distrações visuais poderiam ser utilizadas isoladamente, reduzindo o tempo do teste e
 mantendo a precisão.
 
-Avançando nesse campo, Wiebe et al. (2024) criaram uma solução diagnóstica que
+Avançando nesse campo, \textcite{Wiebe2024} criaram uma solução diagnóstica que
 envolve um ambiente de realidade virtual (VR), onde os participantes realizavam um teste de
 desempenho imersivo sob a ocorrência de distrações simuladas em um ambiente 3D.
 Durante a tarefa, foram coletados dados simultâneos de eye tracking, movimentos da
