--- a/f299-template-pi-paper/Topicos/introducao.tex
+++ b/f299-template-pi-paper/Topicos/introducao.tex
@@ -15,9 +15,8 @@ desatenção, impulsividade, e, em alguns casos, hiperatividade, afetando signif
 desempenho acadêmico, profissional e social dos afetados. Embora o diagnóstico clínico do
 TDA seja baseado tradicionalmente em entrevistas e questionários subjetivos, avanços
 tecnológicos têm permitido o uso de ferramentas mais robustas e quantitativas para apoiar
-esse processo.
-https://bvsms.saude.gov.br/transtorno-do-deficit-de-atencao-com-hiperatividade-tdah/ Entre
-essas ferramentas, destaca-se o eye tracking (ou rastramento ocular), esta é uma técnica
+esse processo. \textcite{BVS2014}
+Entre essas ferramentas, destaca-se o eye tracking (ou rastramento ocular), esta é uma técnica
 que consiste em usar o posicionamento dos olhos de uma pessoa para obter informações
 sobre onde ela está olhando. Isso pode ser feito usando luzes infravermelhas, que calculam
 exatamente onde a pessoa está olhando com base nas reflexões da luz na retina, ou por
@@ -37,7 +36,7 @@ específicas, fornecendo dados objetivos e detalhados sobre onde, por quanto tem
 que sequência uma pessoa fixa seu olhar em determinados estímulos visuais. Estudos
 demonstram que pessoas com TDA apresentam menor tempo de fixação e padrão visual
 mais disperso ao realizarem testes de desempenho, sugerindo dificuldade em manter a
-atenção sustentada e filtragem de estímulos irrelevantes (Lim et al., 2024).
+atenção sustentada e filtragem de estímulos irrelevantes \textcite{Lim2024}.
 
 O Teste de Desempenho Contínuo (TDC) é uma medida padronizada amplamente
 utilizada na neuropsicologia para avaliar métricas de atenção sustentada, impulsividade,
