--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -2,7 +2,7 @@ Este projeto propõe o desenvolvimento de uma plataforma digital gamificada com 
 de auxiliar nos possíveis indícios do Transtorno de Déficit de Atenção (TDA) em adultos. A
 metodologia fundamenta-se na aplicação adaptada do Teste de Desempenho Contínuo
 (TDC), tradicionalmente utilizado em avaliações neuropsicológicas para medir aspectos da
-atenção sustentada, impulsividade, tempo de resposta e variabilidade das reações. (CPT3). A
+atenção sustentada, impulsividade, tempo de resposta e variabilidade das reações. \textcite{CPT2025}. A
 principal diferença do presente trabalho está na integração do TDC com o rastreamento
 ocular em tempo real, o que permite a coleta de dados visuais complementares durante a
 execução das tarefas.
@@ -113,7 +113,7 @@ Code), um Ambiente de Desenvolvimento Integrado (IDE) criado pela Microsoft em 2
 VS Code é um editor de código aberto amplamente reconhecido e utilizado na comunidade
 de desenvolvimento por sua versatilidade e eficiência. Ele suporta diversas linguagens de
 programação, oferecendo uma interface amigável e funcionalidades que potencializam o
-processo de desenvolvimento. Hanashiro (2022)
+processo de desenvolvimento. \textcite{HanashiroVSCode}
 
 Em relação a diagramação, foi utilizada a Unified Modeling Language (UML), desenvolvida
 por Grady Booch, James Rumbaugh e Ivar Jacobson, que serve para documentar projetos de
@@ -163,7 +163,7 @@ Para o desenvolvimento do banco de dados e gerenciamento das coleções, foi uti
 ferramenta MongoDB Compass, uma interface gráfica oficial do MongoDB que permite a
 visualização, consulta e manipulação dos dados de forma intuitiva. A ferramenta facilita a
 inspeção de documentos, a criação de filtros avançados utilizando a linguagem de consulta
-do MongoDB (MQL – MongoDB Query Language), além de oferecer suporte para validação
+do MongoDB (MQL - MongoDB Query Language), além de oferecer suporte para validação
 de esquema e análise de desempenho.
 
 Para desenvolver a logo e a identidade visual da equipe e do jogo, bem como a prototipação
@@ -171,8 +171,7 @@ das telas do software, foi utilizada a plataforma colaborativa de design Figma. 
 ferramenta permite criar interfaces e protótipos de forma intuitiva, possibilitando a
 construção de fluxos de navegação e layouts de maneira integrada. Além disso, o Figma
 favorece a colaboração em tempo real entre designers e demais membros da equipe, o que
-contribuiu para uma criação mais eficiente e alinhada com os objetivos do projeto. Villain
-Matheus; Silveira (2024)
+contribuiu para uma criação mais eficiente e alinhada com os objetivos do projeto.\textcite{VillainSilveiraFigma}
 
 Além disso, utilizamos a ferramenta SEBRAE Canvas para estruturar o modelo de negócios do
 jogo. Um modelo de negócios descreve como uma organização cria, entrega e captura valor,
@@ -196,13 +195,12 @@ Dentre as metodologias utilizadas, destaca-se o Scrum, um framework de gerenciam
 que permite que equipes se auto-organizem e trabalhem em direção a um objetivo comum.
 Com o Scrum, foram incorporados valores fundamentais como compromisso, coragem, foco,
 abertura e respeito. As atividades foram estruturadas em sprints semanais, com a aplicação
-dos principais artefatos da metodologia, como o backlog, a sprint backlog e as reuniões.
-(Amazon)
+dos principais artefatos da metodologia, como o backlog, a sprint backlog e as reuniões. \textcite{Scrum2022}
 
 Outra metodologia adotada foi o Kanban, um sistema visual originado na Toyota, no Japão,
 que visa otimizar o fluxo de trabalho. O Kanban organiza as tarefas em colunas como “A
 Fazer”, “Em Progresso” e “Concluído”, oferecendo uma visão clara do andamento do projeto e
-das prioridades. (TOTVS, 2023)
+das prioridades. \textcite{TOTVSKanban}
 
 Para apoiar a aplicação dessas metodologias, foi utilizada a ferramenta Trello, um sistema de
 gerenciamento de projetos baseado em quadros visuais. Por meio do Trello, as tarefas foram
@@ -210,5 +208,4 @@ organizadas em cartões, que podiam ser movidos entre listas, proporcionando um
 acompanhamento visual do progresso. Cada cartão permitia a inclusão de checklists, datas
 de vencimento e responsáveis, oferecendo uma visão detalhada de cada etapa do projeto.
 Assim, a combinação entre o Trello e a metodologia Kanban contribuiu significativamente
-para a organização, eficiência e colaboração no desenvolvimento do sistema. (Magalhães,
-2022)
+para a organização, eficiência e colaboração no desenvolvimento do sistema. \textcite{MagalhaesTrello} 
