--- a/f299-template-pi-paper/fatec-article.bib
+++ b/f299-template-pi-paper/fatec-article.bib
@@ -1,37 +1,151 @@
-@Article{Alencar2007,
-  author       = {Alencar, Luciana Hazin and de Almeida, Adiel Teixeira and Mota, Caroline Maria{ }de Miranda},
-  title        = {Sistemática proposta para seleção de fornecedores em gestão de projetos},
-  journal      = {Gestão {\&} Produção},
-  publisher    = {Universidade Federal de São Carlos (UFSCar)},
-  volume       = {14},
-  number       = {3},
-  pages        = {477--487},
-  year         = {2007},
-  month        = dec,
-  doi          = {10.1590/s0104-530x2007000300005},
-  issn         = {0104-530X},
+@misc{BVS2014,
+  author = {Ministerio da Saúde},
+  title  = {Transtorno do déficit de atenção com hiperatividade - TDAH},
+  year   = {2014},
+  url    = {https://bvsms.saude.gov.br/transtorno-do-deficit-de-atencao-com-hiperatividade-tdah/}
+}
+
+@article{Lim2024,
+  author  = {Yoo, Jae Hyun  and Kang, ChangSu  and Lim, Joon Shik  and Wang, Bohyun  and Choi, Chi-Hyun  and Hwang, Hyunchan  and Han, Doug Hyun  and Kim, Hyungjun  and Cheon, Hosang  and Kim, Jae-Won },
+  title   = {Development of an innovative approach using portable eye tracking to assist ADHD screening: a machine learning study},
+  journal = {Frontiers in Psychiatry},
+  volume  = {15},
+  year    = {2024},
+  url     = {https://www.frontiersin.org/journals/psychiatry/articles/10.3389/fpsyt.2024.1337595},
+  doi     = {10.3389/fpsyt.2024.1337595},
+  issn    = {1664-0640}
+}
+
+@article{Nascimento2020,
+  title   = {A RELAÇÃO ENTRE A PRÁTICA REGULAR DE VIDEOGAMES E ATENÇÃO SUSTENTADA},
+  volume  = {25},
+  url     = {https://revista.cienciasecognicao.org/index.php/cec/article/view/1661},
+  number  = {1},
+  journal = {Ciências {\&}amp; Cognição},
+  author  = {Nascimento, Lucas Martins and Menezes, Carolina Baptista},
+  year    = {2020},
+  month   = dec,
+  pages   = {141-156}
+}
+
+
+@article{Elbaum2020,
+  author         = {Elbaum, Tomer and Braw, Yoram and Lev, Astar and Rassovsky, Yuri},
+  title          = {Attention-Deficit/Hyperactivity Disorder (ADHD): Integrating the MOXO-dCPT with an Eye Tracker Enhances Diagnostic Precision},
+  journal        = {Sensors},
+  volume         = {20},
+  year           = {2020},
+  number         = {21},
+  article-number = {6386},
+  url            = {https://www.mdpi.com/1424-8220/20/21/6386},
+  pubmedid       = {33182303},
+  issn           = {1424-8220},
+  doi            = {10.3390/s20216386}
+}
+
+
+@article{Wiebe2024,
+  author  = {Wiebe, Annika and Selaskowski, Benjamin and Paskin, Martha and Asché, Laura and Pakos, Julian and Aslan, Behrem and Lux, Silke and Philipsen, Alexandra and Braun, Niclas},
+  title   = {Virtual reality-assisted prediction of adult ADHD based on eye tracking, EEG, actigraphy and behavioral indices: a machine learning analysis of independent training and test samples},
+  journal = {Translational Psychiatry},
+  year    = {2024},
+  volume  = {14},
+  number  = {1},
+  pages   = {508},
+  doi     = {10.1038/s41398-024-03217-y},
+  url     = {https://doi.org/10.1038/s41398-024-03217-y},
+  issn    = {2158-3188}
+}
+
+@misc{CPT2025,
+  title = {CPT3},
+  year  = {2025},
+  month = apr,
+  url   = {https://icbneuro.com.br/portal/exames/cpt3/},
+  note  = {Acessado em: 2 maio 2025}
+}
+
+@article{Tortella2008,
+  author = {Tortella, Gabriel},
+  title  = {Teste de Atenção por cancelamento: avaliação da atenção em estudantes do ensino fundamental},
+  year   = {2008},
+  url    = {https://pepsic.bvsalud.org/scielo.php?script=sci_arttext&pid=S1677-04712008000200018},
+  note   = {Acessado em: 11 abr. 2025}
+}
+
+@misc{HanashiroVSCode,
+  author = {Hanashiro, Akira},
+  title  = {VS Code - O que é e por que você deve usar?},
+  url    = {https://www.treinaweb.com.br/blog/vs-code-o-que-e-e-por-que-voce-deve-usar}
+}
+
+@misc{LucidchartUML,
+  author = {{Lucidchart}},
+  title  = {O que é um diagrama de classe UML?},
+  url    = {https://www.lucidchart.com/pages/pt/o-que-e-diagrama-de-classe-uml}
+}
+
+@misc{Scrum2022,
+  title = {O que é o Scrum?},
+  year  = {2022},
+  url   = {https://aws.amazon.com/pt/what-is/scrum/#:~:text=O},
+  note  = {Acessado em: 6 maio 2025}
+}
+
+@misc{TOTVSKanban,
+  author = {{TOTVS, Equipe}},
+  title  = {Kanban: conceito, como funciona, vantagens e implementação},
+  url    = {https://www.totvs.com/blog/negocios/kanban/}
+}
+
+@misc{VillainSilveiraFigma,
+  author = {Villain, Matheus and Silveira, Maria},
+  title  = {Figma: o que é a ferramenta, design e como usar},
+  url    = {https://www.alura.com.br/artigos/figma}
+}
+
+@misc{MagalhaesTrello,
+  author = {Magalhães, William},
+  title  = {O que é e como usar o Trello: guia para gerenciar projetos},
+  url    = {https://www.remessaonline.com.br/blog/como-usar-o-trello/#:~:text=O%20que%20%C3%A9%20Trello%3F,cada%20membro%20de%20sua%20equipe}
+}
+
+
+
+@article{Alencar2007,
+  author    = {Alencar, Luciana Hazin and de Almeida, Adiel Teixeira and Mota, Caroline Maria{ }de Miranda},
+  title     = {Sistemática proposta para seleção de fornecedores em gestão de projetos},
+  journal   = {Gestão {\&} Produção},
+  publisher = {Universidade Federal de São Carlos (UFSCar)},
+  volume    = {14},
+  number    = {3},
+  pages     = {477--487},
+  year      = {2007},
+  month     = dec,
+  doi       = {10.1590/s0104-530x2007000300005},
+  issn      = {0104-530X}
 }
 
 @book{lee2019inteligencia,
-  title={Intelig{\^e}ncia artificial},
-  author={Lee, Kai-Fu},
-  year={2019},
-  publisher={Globo livros}
+  title     = {Intelig{\^e}ncia artificial},
+  author    = {Lee, Kai-Fu},
+  year      = {2019},
+  publisher = {Globo livros}
 }
 
-@Book{Kalakota2002,
-  author       = {Kalakota, Ravi and Robinson, Marcia},
-  title        = {E-Business},
-  subtitle     = {Estratégias para Alcançar o Sucesso no Mundo Digital},
-  publisher    = {Bookman},
-  address      = {Porto Alegre, RS},
-  edition      = {2},
-  pagetotal    = {470},
-  year         = {2002},
-  isbn         = {9788573078756},
+@book{Kalakota2002,
+  author    = {Kalakota, Ravi and Robinson, Marcia},
+  title     = {E-Business},
+  subtitle  = {Estratégias para Alcançar o Sucesso no Mundo Digital},
+  publisher = {Bookman},
+  address   = {Porto Alegre, RS},
+  edition   = {2},
+  pagetotal = {470},
+  year      = {2002},
+  isbn      = {9788573078756}
 }
 
-@InBook{Carvalho2004,
+@inbook{Carvalho2004,
   author       = {de Carvalho, Valter Rodrigues},
   title        = {Qualidade de Vida no Trabalho},
   bookauthor   = {Oliveira, O. J.},
@@ -42,10 +156,10 @@
   chapter      = {11},
   pages        = {159--168},
   year         = {2004},
-  isbn         = {9788522113897},
+  isbn         = {9788522113897}
 }
 
-@InProceedings{Ramos2003,
+@inproceedings{Ramos2003,
   author       = {Ramos, Anatália Saraiva Martins and Miranda, Ana Lúcia Brenner},
   title        = {Processo de adoção de um sistema integrado de gestão (ERP)},
   subtitle     = {uma pesquisa qualitativa com gestores da Unimed/Natal},
@@ -61,38 +175,33 @@
   year         = {2003},
   url          = {http://www.abepro.org.br/biblioteca/ENEGEP2003_TR0903_1652.pdf},
   urldate      = {2023-12-05},
-  note         = {Paper ID: ENEGEP2003-TR0903-1652},
+  note         = {Paper ID: ENEGEP2003-TR0903-1652}
 }
 
-@MastersThesis{Purcidonio2008,
-  author       = {Purcidonio, Paula Michelle},
-  title        = {Práticas de gestão do conhecimento em arranjo produtivo local},
-  subtitle     = {o setor moveleiro de Arapongas {\textemdash} PR},
-  eventdate    = {2008-02},
-  school       = {Universidade Tecnológica Federal do Paraná},
-  address      = {Ponta Grossa, PR},
-  pagetotal    = {153},
-  year         = {2008},
-  url          = {http://repositorio.utfpr.edu.br/jspui/handle/1/3661},
-  urldate      = {2023-12-05},
-  type         = {Dissertação (Mestrado em Engenharia de Produção)},
+@mastersthesis{Purcidonio2008,
+  author    = {Purcidonio, Paula Michelle},
+  title     = {Práticas de gestão do conhecimento em arranjo produtivo local},
+  subtitle  = {o setor moveleiro de Arapongas {\textemdash} PR},
+  eventdate = {2008-02},
+  school    = {Universidade Tecnológica Federal do Paraná},
+  address   = {Ponta Grossa, PR},
+  pagetotal = {153},
+  year      = {2008},
+  url       = {http://repositorio.utfpr.edu.br/jspui/handle/1/3661},
+  urldate   = {2023-12-05},
+  type      = {Dissertação (Mestrado em Engenharia de Produção)}
 }
 
-@Misc{Beltrano2021,
-  author       = {Beltrano, P.},
-  title        = {Título do trabalho do Beltrano},
-  editor       = {Sicrano, P.},
-  year         = {2021},
+
+
+@misc{Fulano2021,
+  author = {Fulano, P.},
+  title  = {Título do trabalho do Fulano},
+  editor = {Beltrano, P.},
+  year   = {2021}
 }
 
-@Misc{Fulano2021,
-  author       = {Fulano, P.},
-  title        = {Título do trabalho do Fulano},
-  editor       = {Beltrano, P.},
-  year         = {2021},
-}
-
-@Misc{UTFPR2018,
+@misc{UTFPR2018,
   author       = {UTFPR},
   title        = {Fachada campus Ponta Grossa},
   howpublished = {Portal da Universidade Tecnológica Federal do Paraná (UTFPR)},
@@ -100,47 +209,49 @@
   year         = {2018},
   url          = {http://portal.utfpr.edu.br/comunicacao/galeria-de-fotos/},
   urldate      = {2023-12-05},
-  note         = {Galeria de fotos},
+  note         = {Galeria de fotos}
 }
 
-@Book{knuth:84,
-  author = 	 {Donald E. Knuth},
-  title = 	 {The {\TeX} Book},
-  publisher = 	 {Addison-Wesley},
-  year = 	 {1984},
-  edition = 	 {15th},
+@book{knuth:84,
+  author    = {Donald E. Knuth},
+  title     = {The {\TeX} Book},
+  publisher = {Addison-Wesley},
+  year      = {1984},
+  edition   = {15th}
 }
 
-@InCollection{boulic:91,
-  author = 	 {R. Boulic and O. Renault},
-  title = 	 {3D Hierarchies for Animation},
-  booktitle = 	 {New Trends in Animation and Visualization},
-  publisher =    {John Wiley {\&} Sons ltd.},
-  year = 	 {1991},
-  editor = 	 {Nadia Magnenat-Thalmann and Daniel Thalmann},
+@incollection{boulic:91,
+  author    = {R. Boulic and O. Renault},
+  title     = {3D Hierarchies for Animation},
+  booktitle = {New Trends in Animation and Visualization},
+  publisher = {John Wiley {\&} Sons ltd.},
+  year      = {1991},
+  editor    = {Nadia Magnenat-Thalmann and Daniel Thalmann}
 }
 
-@InCollection{smith:99,
-  author = 	 {A. Smith and B. Jones},
-  title = 	 {On the Complexity of Computing},
-  booktitle = 	 {Advances in Computer Science},
-  pages = 	 {555--566},
-  publisher =    {Publishing Press},
-  year = 	 {1999},
-  editor = 	 {A. B. Smith-Jones},
+@incollection{smith:99,
+  author    = {A. Smith and B. Jones},
+  title     = {On the Complexity of Computing},
+  booktitle = {Advances in Computer Science},
+  pages     = {555--566},
+  publisher = {Publishing Press},
+  year      = {1999},
+  editor    = {A. B. Smith-Jones}
 }
 
-@PhdThesis{Andujar2006,
-  author       = {Andujar, Andrea Martins},
-  title        = {Modelo de qualidade de vida dentro dos domínios bio-psico-social para aposentados},
-  eventdate    = {2006-05},
-  school       = {Universidade Federal de Santa Catarina},
-  address      = {Florianópolis, SC},
-  pagetotal    = {206},
-  year         = {2006},
-  url          = {http://repositorio.ufsc.br/xmlui/handle/123456789/88517},
-  urldate      = {2023-12-05},
-  type         = {Tese (Doutorado em Engenharia de Produção)},
+@phdthesis{Andujar2006,
+  author    = {Andujar, Andrea Martins},
+  title     = {Modelo de qualidade de vida dentro dos domínios bio-psico-social para aposentados},
+  eventdate = {2006-05},
+  school    = {Universidade Federal de Santa Catarina},
+  address   = {Florianópolis, SC},
+  pagetotal = {206},
+  year      = {2006},
+  url       = {http://repositorio.ufsc.br/xmlui/handle/123456789/88517},
+  urldate   = {2023-12-05},
+  type      = {Tese (Doutorado em Engenharia de Produção)}
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
+
+
