--- a/f299-template-pi-paper/fatec-article.sty
+++ b/f299-template-pi-paper/fatec-article.sty
@@ -437,13 +437,13 @@
     O título deve conter até 70 caracteres sem espaço, não deve conter caracteres especiais ou símbolos. %
     Utilize caixa baixa como neste exemplo e letra maiúscula somente quando necessário%
   }{%
-    DIGITE O TÍTULO DO SEU PROJETO AQUI%
+    Teste de Desempenho Contínuo Orientado por Visão Computacional%
   }%
 }{%
   \ifbool{@LayoutA}{%
    Title in english, follow the same format as the title in portuguese%
   }{%
-   INSERT THE TITLE OF WORK HERE%
+   Continuous Performance Testing Guided by Computer Vision.%
   }%
 }
 %%%% Data(s)
