metodologia e objetivos corrigidos

--- a/f299-template-pi-paper/Topicos/objetivo.tex
+++ b/f299-template-pi-paper/Topicos/objetivo.tex
@@ -1,6 +1,6 @@
 Desenvolver uma plataforma digital gamificada, acessível por navegador, que utiliza
 rastreamento ocular e métricas de desempenho atencional para auxiliar na triagem inicial de
-indícios do Transtorno de Déficit de Atenção (TDA) em adultos.
+indícios do Transtorno de Déficit de Atenção (TDA) em crianças de 10 a 12 anos.
 
 \subsection*{OBJETIVOS ESPECÍFICOS} 
 
