--- a/f299-template-pi-paper/fatec-article.bib
+++ b/f299-template-pi-paper/fatec-article.bib
@@ -254,4 +254,13 @@
 
 @Comment{jabref-meta: databaseType:biblatex;}
 
-
+@inproceedings{papoutsaki2016webgazer,
+  author    = {Papoutsaki, Alexandra and Sangkloy, Patsorn and Laskey, James and Daskalova, Nediyana and Huang, Jeff e Hays, James},
+  title     = {WebGazer: Rastreamento ocular escalável via webcam usando interações do usuário},
+  booktitle = {Anais da 25ª Conferência Internacional Conjunta sobre Inteligência Artificial (IJCAI)},
+  year      = {2016},
+  month     = jul,
+  day       = {9},
+  url       = {https://webgazer.cs.brown.edu/}
+}
+```
